--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ img {
   margin-right: -134%;
 }
 
-#funParagraph {
+.funParagraph {
   color: green;
   font-family: GeoEditRegular, Franklin Gothic Medium, Franklin Gothic,
     ITC Franklin Gothic, Helvetica, Arial, sans-serif;
