changed main heading to red text per jasmine test

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ img {
   font-style: normal;
   letter-spacing: 0.1px;
 
-  color: rgba(211, 31, 31, 0.856);
+  color: red;
   margin-left: 95%;
   width: 300px;
 }
